entity_macros/tests/ui/derive/async_graphql_ent_filter/unsupported-enum.stderr
error: Enums are not supported
 --> $DIR/unsupported-enum.rs:4:1
  |
4 | / enum TestEnt {
5 | |     A,
6 | |     B,
7 | | }
  | |_^
