entity_macros/tests/ui/derive/async_graphql_ent_filter/unsupported-enum.rs
use entity::AsyncGraphqlEntFilter;

#[derive(AsyncGraphqlEntFilter)]
enum TestEnt {
    A,
    B,
}

fn main() {}
